[gd_scene load_steps=5 format=3 uid="uid://c5biu4oit5131"]

[ext_resource type="Script" path="res://Scripts/BasicTemporarySpell.gd" id="1_johr6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tf1xq"]
albedo_color = Color(0.239216, 0.431373, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_osvim"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dkwxi"]

[node name="SpellTemporary" type="Node3D"]
script = ExtResource("1_johr6")
ProjectileSpeed = 0.0
ProjectileDamage = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_tf1xq")
mesh = SubResource("SphereMesh_osvim")

[node name="NearestEnemy" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="NearestEnemy"]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, 0)
shape = SubResource("SphereShape3D_dkwxi")

[node name="HitCollider" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitCollider"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.00024, 0)
shape = SubResource("SphereShape3D_dkwxi")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="HitCollider" to="." method="_on_hit_collider_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
